syntax = "proto3";

message UserFurnitureTeleportData {
    string furniture_id = 1;
}
